# CRC

./: CMakeLists.txt  README.md
cmake/: googletest.cmake
include/: CMakeLists.txt  common_crc_type.hpp  crc.hpp  utility.hpp
test/: CMakeLists.txt  main.cpp  pch.h  test_CRC16.cpp  test_CRC32.cpp  test_CRC64.cpp  test_CRC8.cpp
